--- a/app/src/main/res/layout/modelo_planetas.xml
+++ b/app/src/main/res/layout/modelo_planetas.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="160dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/idCardModelo"
+        android:id="@+id/idcardModelo"
         android:layout_width="match_parent"
         android:layout_height="160dp">
 
         <ImageView
-            android:id="@+id/idModeloPlaneta"
+            android:id="@+id/idmodeloPlaneta"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_gravity="center"
+            android:layout_gravity="center|left"
             android:scaleType="centerCrop"
             android:src="@drawable/terra" />
 
         <TextView
-
-            android:id="@+id/idTxtPlaneta"
+            android:id="@+id/idtxtPlaneta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30sp"
             android:text="Terra"
             android:textColor="#000"
-            android:textSize="50sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
     </androidx.cardview.widget.CardView>
